[gd_scene load_steps=8 format=3 uid="uid://dmyvbdh75k170"]

[ext_resource type="Script" path="res://Environment/Gather/Tree/Tree.gd" id="1_jwbmf"]
[ext_resource type="Resource" uid="uid://ckche2w2ns158" path="res://Scripts/Inventory/Resources/Wood.tres" id="2_0xwb6"]
[ext_resource type="Texture2D" uid="uid://cm56q7tw6teyg" path="res://Environment/NatureOG.png" id="3_x0j6g"]
[ext_resource type="Texture2D" uid="uid://bln8h2wjekdoc" path="res://Sprites/Shadow.png" id="4_q1oxo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l5dfa"]
size = Vector2(65, 44)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_y0jxg"]
radius = 104.0
height = 358.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pwg1h"]
size = Vector2(262, 215)

[node name="Tree" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_jwbmf")
hide_color = Color(1, 1, 1, 0.698039)
resource = ExtResource("2_0xwb6")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-5, -28)
texture = ExtResource("3_x0j6g")
offset = Vector2(1, -68)
region_enabled = true
region_rect = Rect2(1018, 300, 58, 136)

[node name="Sprite2D" type="Sprite2D" parent="Sprite2D"]
position = Vector2(6, -138)
rotation = -0.0845864
texture = ExtResource("3_x0j6g")
offset = Vector2(-6, -59)
region_enabled = true
region_rect = Rect2(902, 1, 306, 287)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 33
collision_mask = 267

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-1.5, -12)
shape = SubResource("RectangleShape2D_l5dfa")
debug_color = Color(0.768627, 0, 0.176471, 0.419608)

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -174)
shape = SubResource("CapsuleShape2D_y0jxg")

[node name="Mouse_Zone" type="Area2D" parent="."]
collision_layer = 1024
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mouse_Zone"]
position = Vector2(0, -130.5)
shape = SubResource("RectangleShape2D_pwg1h")
debug_color = Color(0.666667, 0.352941, 0.0941176, 0.419608)

[node name="WoodPoint" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(3, 4)
texture = ExtResource("3_x0j6g")
offset = Vector2(-3, -14)
region_enabled = true
region_rect = Rect2(1010, 480, 84, 68)

[node name="Shadow" type="Sprite2D" parent="WoodPoint"]
z_index = -2
position = Vector2(-1.33333, 12)
scale = Vector2(3.72606, 3.72606)
texture = ExtResource("4_q1oxo")

[node name="Timer" type="Timer" parent="."]
wait_time = 25.0
one_shot = true

[node name="TreeAudio" type="AudioStreamPlayer2D" parent="."]
bus = &"BGS"

[connection signal="area_entered" from="Mouse_Zone" to="." method="_on_mouse_zone_area_entered"]
[connection signal="area_exited" from="Mouse_Zone" to="." method="_on_mouse_zone_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
